src/test/ui/borrowck/issue-51415.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-51415.rs:6:42
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                          ^^^^^-^
   |                                          |    |
   |                                          |    data moved here
   |                                          cannot move out of borrowed content
   |
note: move occurs because `s` has type `std::string::String`, which does not implement the `Copy` trait
  --> $DIR/issue-51415.rs:6:47
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                               ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
